Made some changes with banner picture

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     {% include 'nav.html' %}
-    <img class="img-fluid" id="banner" src="https://d78ac769-1f6c-4739-9396-0d8953ddc89a-00-3lzkeocnvvh8p.pike.replit.dev/static/banner.jpg" height="320">
+    <img class="img-fluid" id="banner" src=/static/banner.jpg height="320">
     <div class="container" >
     <h1 class="text-center mt-2 mb-4" >{{company_name}} Carrers</h1>
     <div class="row" style="margin-bottom:16px;">
