--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <title>Mayank Carrers</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    {% include 'bootstrap.html' %}
     <style>
       #banner{
         height: 360px;
@@ -17,9 +15,9 @@
   </head>
   <body>
     {% include 'nav.html' %}
-    <img class="img-fluid" id="banner" src=/static/banner.jpg height="320">
+    {% include 'banner.html' %}
     <div class="container" >
-    <h1 class="text-center mt-2 mb-4" >{{company_name}} Carrers</h1>
+    <h1 class="text-center mt-2 mb-4" >{{company_name}} Careers</h1>
     <div class="row" style="margin-bottom:16px;">
       <div class="col-md-6">
     <p class="lead">
