--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -7,6 +7,6 @@
    {% endif %}
   </div>
   <div class="col-3 padding-right:16px">
-    <a href="mailto:hello@mayank.ai?subject=Application for {{job['title']}}" type="button" class="btn btn-primary">Apply Here</a>
+    <a href="/job/{{job['id']}}" type="button" class="btn btn-primary">Apply Here</a>
   </div>
  </div>
