did some minor changes

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,3 +1,9 @@
+<style>
+.empty-div {
+    height: 66px;
+}
+</style>
+
 <nav class="navbar shadow-sm fixed-top bg-white">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
@@ -6,4 +12,4 @@
     </a>
   </div>
 </nav
-<div style="height:56px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  </div>
+<div class="empty-div"></div>
